--- a/index.html
+++ b/index.html
@@ -1592,7 +1592,7 @@ body.dark-mode.theme-sky header {
       <img src="Resume folder-bro.svg" alt="CV Illustration">
     </div>
     <p style="text-align:center;">
-      <a href="My_c .pdf" target="_blank" id="cvLink" style="background:var(--primary-color); color:white; padding:12px 25px; 
+      <a href="my cv (1) (1).pdf" target="_blank" id="cvLink" style="background:var(--primary-color); color:white; padding:12px 25px; 
                 border-radius:30px; text-decoration:none; font-weight:600; 
                 box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
         📄 View / Download My CV
@@ -2310,3 +2310,4 @@ setTimeout(typing, 500);
 </script>
 </body>
 </html>
+
