--- a/index.html
+++ b/index.html
@@ -1493,54 +1493,124 @@ body.dark-mode.theme-sky header {
     </div>
   </section>
 
-  <!-- NEW: Interactive Timeline Section -->
-  <section id="timeline" data-aos="fade-up">
-    <h2><i class="fa-solid fa-timeline"></i> Professional Timeline</h2>
-    <div class="illustration"><img src="Timeline-bro.svg" alt="Timeline"></div>
-    
-    <div class="timeline">
-      <div class="timeline-item">
-        <div class="timeline-content">
-          <div class="timeline-year">2025</div>
-          <h4>Master in AI - With Distinction</h4>
-          <p>Click for details</p>
-          <div class="timeline-details">
-            <p>Completed Master's degree in Artificial Intelligence with distinction. Specialized in deep learning and computer vision applications.</p>
-          </div>
-        </div>
-      </div>
-      <div class="timeline-item">
-        <div class="timeline-content">
-          <div class="timeline-year">2023-2025</div>
-          <h4>IT Specialist - ZHONGMA International</h4>
-          <p>Click for details</p>
-          <div class="timeline-details">
-            <p>Managed IT infrastructure and developed custom software solutions for international construction projects.</p>
-          </div>
-        </div>
-      </div>
-      <div class="timeline-item">
-        <div class="timeline-content">
-          <div class="timeline-year">2023</div>
-          <h4>Bachelor in Computer Science</h4>
-          <p>Click for details</p>
-          <div class="timeline-details">
-            <p>Graduated with Bachelor's degree in Computer Science, focusing on information systems and software engineering.</p>
-          </div>
-        </div>
-      </div>
-      <div class="timeline-item">
-        <div class="timeline-content">
-          <div class="timeline-year">2022-2023</div>
-          <h4>STEAM & Programming Lecturer</h4>
-          <p>Click for details</p>
-          <div class="timeline-details">
-            <p>Taught programming and STEAM concepts at university level, developing creative educational programs.</p>
-          </div>
+  <!-- UPDATED: Interactive Timeline Section -->
+<section id="timeline" data-aos="fade-up">
+  <h2><i class="fa-solid fa-timeline"></i> Professional Timeline</h2>
+  <div class="illustration">
+    <img src="Timeline-bro.svg" alt="Timeline">
+  </div>
+
+  <div class="timeline">
+
+    <!-- 2026 -->
+    <div class="timeline-item">
+      <div class="timeline-content">
+        <div class="timeline-year">2025–2026</div>
+        <h4>Lecturer / Computer Science Module Instructor – USTO-MB</h4>
+        <p>Click for details</p>
+        <div class="timeline-details">
+          <p>Delivered computer science and applied informatics modules for biotechnology students at the University of Science and Technology of Oran (USTO-MB).</p>
         </div>
       </div>
     </div>
-  </section>
+
+    <div class="timeline-item">
+      <div class="timeline-content">
+        <div class="timeline-year">2025–2026</div>
+        <h4>Mathematics Teacher – CEM (Middle School)</h4>
+        <p>Click for details</p>
+        <div class="timeline-details">
+          <p>Taught core mathematics concepts, strengthening analytical thinking and problem-solving skills for middle school students.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 2025 -->
+    <div class="timeline-item">
+      <div class="timeline-content">
+        <div class="timeline-year">2025</div>
+        <h4>Medical Imaging Intern – Private Radiology Clinic</h4>
+        <p>Click for details</p>
+        <div class="timeline-details">
+          <p>Prepared and anonymized MRI and CT scan datasets for artificial intelligence and medical imaging research.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="timeline-item">
+      <div class="timeline-content">
+        <div class="timeline-year">2025</div>
+        <h4>Master in Artificial Intelligence – With Distinction</h4>
+        <p>Click for details</p>
+        <div class="timeline-details">
+          <p>Completed a Master’s degree in Artificial Intelligence with distinction, specializing in deep learning and computer vision.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 2024–2025 -->
+    <div class="timeline-item">
+      <div class="timeline-content">
+        <div class="timeline-year">2024–2025</div>
+        <h4>IT Specialist – Private Neurology Clinic</h4>
+        <p>Click for details</p>
+        <div class="timeline-details">
+          <p>Managed clinical information systems and supported intelligent medical equipment in a healthcare environment.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 2023–2025 -->
+    <div class="timeline-item">
+      <div class="timeline-content">
+        <div class="timeline-year">2023–2025</div>
+        <h4>IT Specialist – ZHONGMA International Construction (Chinese Company)</h4>
+        <p>Click for details</p>
+        <div class="timeline-details">
+          <p>Led IT infrastructure management, workflow automation, and AI-enabled digital solutions for international construction projects.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 2022–2024 -->
+    <div class="timeline-item">
+      <div class="timeline-content">
+        <div class="timeline-year">2022–2024</div>
+        <h4>Founder & President – Auto Tech Scientific Club</h4>
+        <p>Click for details</p>
+        <div class="timeline-details">
+          <p>Founded and led a scientific club focused on robotics, artificial intelligence, and autonomous systems.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 2022–2023 -->
+    <div class="timeline-item">
+      <div class="timeline-content">
+        <div class="timeline-year">2022–2023</div>
+        <h4>STEAM & Programming Instructor – University</h4>
+        <p>Click for details</p>
+        <div class="timeline-details">
+          <p>Taught programming (C, C++, Java) and introduced artificial intelligence concepts through hands-on STEAM education.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 2023 -->
+    <div class="timeline-item">
+      <div class="timeline-content">
+        <div class="timeline-year">2023</div>
+        <h4>Bachelor in Computer Science</h4>
+        <p>Click for details</p>
+        <div class="timeline-details">
+          <p>Earned a Bachelor’s degree in Computer Science with a focus on software engineering and information systems.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
   <section id="languages" data-aos="fade-up">
     <h2><i class="fa-solid fa-language"></i> Languages</h2>
@@ -2310,4 +2380,5 @@ setTimeout(typing, 500);
 </script>
 </body>
 </html>
+
 
