--- a/index.html
+++ b/index.html
@@ -1647,14 +1647,70 @@ body.dark-mode.theme-sky header {
     </ul>
   </section>
 
-  <!-- NEW: 3D Elements Section -->
-  <section id="3d-elements" data-aos="fade-up">
-    <h2><i class="fa-solid fa-cube"></i> Interactive 3D Models</h2>
-    <div class="three-d-container" id="threejs-container">
-      <!-- Three.js will render here -->
-    </div>
-    <p style="text-align: center;">Interactive 3D models showcasing my work in AI and development</p>
-  </section>
+ <!-- UPDATED: Interactive 3D Brain Models Section -->
+<section id="3d-elements" data-aos="fade-up">
+  <h2><i class="fa-solid fa-brain"></i> Interactive 3D Brain Models</h2>
+  <div class="three-d-container" id="threejs-container" style="width:100%; height:600px;"></div>
+  <p style="text-align: center;">Explore interactive 3D brain models demonstrating AI and medical imaging projects</p>
+</section>
+
+<!-- Three.js Library -->
+<script src="https://cdn.jsdelivr.net/npm/three@0.162.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/loaders/GLTFLoader.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/controls/OrbitControls.js"></script>
+
+<script>
+  // Scene setup
+  const container = document.getElementById('threejs-container');
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(45, container.clientWidth / container.clientHeight, 0.1, 1000);
+  camera.position.set(0, 1, 3);
+
+  const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+  renderer.setSize(container.clientWidth, container.clientHeight);
+  renderer.setPixelRatio(window.devicePixelRatio);
+  container.appendChild(renderer.domElement);
+
+  // Lighting
+  const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
+  scene.add(ambientLight);
+  const directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
+  directionalLight.position.set(5, 5, 5);
+  scene.add(directionalLight);
+
+  // Orbit Controls
+  const controls = new THREE.OrbitControls(camera, renderer.domElement);
+  controls.enableDamping = true;
+  controls.dampingFactor = 0.05;
+  controls.rotateSpeed = 0.5;
+  controls.zoomSpeed = 1.2;
+
+  // Load 3D brain model (GLB/GLTF)
+  const loader = new THREE.GLTFLoader();
+  loader.load('brain_model.glb', function(gltf) {
+      const brain = gltf.scene;
+      brain.scale.set(1.5, 1.5, 1.5);
+      scene.add(brain);
+  }, undefined, function(error) {
+      console.error('An error occurred loading the 3D model:', error);
+  });
+
+  // Responsive resizing
+  window.addEventListener('resize', () => {
+      camera.aspect = container.clientWidth / container.clientHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(container.clientWidth, container.clientHeight);
+  });
+
+  // Animation loop
+  function animate() {
+      requestAnimationFrame(animate);
+      controls.update();
+      renderer.render(scene, camera);
+  }
+  animate();
+</script>
+
 
   <section id="cv" data-aos="fade-up">
     <h2><i class="fa-solid fa-file-pdf"></i> My CV</h2>
@@ -2380,5 +2436,6 @@ setTimeout(typing, 500);
 </script>
 </body>
 </html>
+
 
 
