--- a/index.html
+++ b/index.html
@@ -1660,12 +1660,14 @@ body.dark-mode.theme-sky header {
 <script src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/controls/OrbitControls.js"></script>
 
 <script>
-  // Scene setup
   const container = document.getElementById('threejs-container');
+
+  // Scene
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(45, container.clientWidth / container.clientHeight, 0.1, 1000);
   camera.position.set(0, 1, 3);
 
+  // Renderer
   const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
   renderer.setSize(container.clientWidth, container.clientHeight);
   renderer.setPixelRatio(window.devicePixelRatio);
@@ -1678,31 +1680,31 @@ body.dark-mode.theme-sky header {
   directionalLight.position.set(5, 5, 5);
   scene.add(directionalLight);
 
-  // Orbit Controls
+  // Controls
   const controls = new THREE.OrbitControls(camera, renderer.domElement);
   controls.enableDamping = true;
   controls.dampingFactor = 0.05;
   controls.rotateSpeed = 0.5;
   controls.zoomSpeed = 1.2;
 
-  // Load 3D brain model (GLB/GLTF)
+  // Load Brain Model (replace 'brain_model.glb' with your actual file)
   const loader = new THREE.GLTFLoader();
   loader.load('brain_model.glb', function(gltf) {
       const brain = gltf.scene;
       brain.scale.set(1.5, 1.5, 1.5);
       scene.add(brain);
   }, undefined, function(error) {
-      console.error('An error occurred loading the 3D model:', error);
+      console.error('Error loading brain model:', error);
   });
 
-  // Responsive resizing
+  // Responsive
   window.addEventListener('resize', () => {
       camera.aspect = container.clientWidth / container.clientHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(container.clientWidth, container.clientHeight);
   });
 
-  // Animation loop
+  // Animate
   function animate() {
       requestAnimationFrame(animate);
       controls.update();
@@ -2436,6 +2438,7 @@ setTimeout(typing, 500);
 </script>
 </body>
 </html>
+
 
 
 
