--- a/index.html
+++ b/index.html
@@ -1647,69 +1647,70 @@ body.dark-mode.theme-sky header {
     </ul>
   </section>
 
-<!-- Interactive 3D Brain Model -->
 <section id="3d-elements" data-aos="fade-up">
-  <h2><i class="fa-solid fa-brain"></i> Interactive 3D Brain Models</h2>
+  <h2><i class="fa-solid fa-brain"></i> Interactive 3D Brain Model</h2>
   <div class="three-d-container" id="threejs-container" style="width:100%; height:600px;"></div>
   <p style="text-align: center;">Explore interactive 3D brain models demonstrating AI and medical imaging projects</p>
 </section>
 
+<!-- Three.js -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.162.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/loaders/GLTFLoader.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/controls/OrbitControls.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/loaders/OBJLoader.js"></script>
 
 <script>
-  const container = document.getElementById('threejs-container');
+const container = document.getElementById('threejs-container');
 
-  // Scene
-  const scene = new THREE.Scene();
-  const camera = new THREE.PerspectiveCamera(45, container.clientWidth / container.clientHeight, 0.1, 1000);
-  camera.position.set(0, 1, 3);
+// Scene & Camera
+const scene = new THREE.Scene();
+const camera = new THREE.PerspectiveCamera(45, container.clientWidth / container.clientHeight, 0.1, 1000);
+camera.position.set(0, 1, 3);
 
-  // Renderer
-  const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
-  renderer.setSize(container.clientWidth, container.clientHeight);
-  renderer.setPixelRatio(window.devicePixelRatio);
-  container.appendChild(renderer.domElement);
+// Renderer
+const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+renderer.setSize(container.clientWidth, container.clientHeight);
+renderer.setPixelRatio(window.devicePixelRatio);
+container.appendChild(renderer.domElement);
 
-  // Lights
-  const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
-  scene.add(ambientLight);
-  const directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
-  directionalLight.position.set(5, 5, 5);
-  scene.add(directionalLight);
+// Lighting
+const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
+scene.add(ambientLight);
 
-  // Orbit Controls
-  const controls = new THREE.OrbitControls(camera, renderer.domElement);
-  controls.enableDamping = true;
-  controls.dampingFactor = 0.05;
-  controls.rotateSpeed = 0.5;
-  controls.zoomSpeed = 1.2;
+const directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
+directionalLight.position.set(5, 5, 5);
+scene.add(directionalLight);
 
-  // Remove any cube geometry: only load the brain model
-  const loader = new THREE.GLTFLoader();
-  loader.load('brain_model.glb', function(gltf) {
-      const brain = gltf.scene;
-      brain.scale.set(1.5, 1.5, 1.5); // adjust size
-      scene.add(brain);
-  }, undefined, function(error) {
-      console.error('Error loading brain model:', error);
-  });
+// Controls
+const controls = new THREE.OrbitControls(camera, renderer.domElement);
+controls.enableDamping = true;
+controls.dampingFactor = 0.05;
+controls.rotateSpeed = 0.5;
+controls.zoomSpeed = 1.2;
 
-  // Responsive
-  window.addEventListener('resize', () => {
-      camera.aspect = container.clientWidth / container.clientHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(container.clientWidth, container.clientHeight);
-  });
+// Load Brain OBJ Model
+const loader = new THREE.OBJLoader();
+loader.load('14618_Human_Brain_Bookend_v1.obj', function(object){
+    object.scale.set(0.02, 0.02, 0.02); // Adjust size
+    object.position.set(0, 0, 0);
+    scene.add(object);
+}, undefined, function(error){
+    console.error('Error loading OBJ model:', error);
+});
 
-  // Animate
-  function animate() {
-      requestAnimationFrame(animate);
-      controls.update();
-      renderer.render(scene, camera);
-  }
-  animate();
+// Responsive
+window.addEventListener('resize', () => {
+    camera.aspect = container.clientWidth / container.clientHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(container.clientWidth, container.clientHeight);
+});
+
+// Animate
+function animate() {
+    requestAnimationFrame(animate);
+    controls.update();
+    renderer.render(scene, camera);
+}
+animate();
 </script>
 
 
@@ -2437,6 +2438,7 @@ setTimeout(typing, 500);
 </script>
 </body>
 </html>
+
 
 
 
