--- a/index.html
+++ b/index.html
@@ -1517,7 +1517,7 @@ body.dark-mode.theme-sky header {
     <div class="timeline-item">
       <div class="timeline-content">
         <div class="timeline-year">2025–2026</div>
-        <h4>Mathematics Teacher – CEM (Middle School)</h4>
+        <h4>Mathematics Teacher – (Middle School)</h4>
         <p>Click for details</p>
         <div class="timeline-details">
           <p>Taught core mathematics concepts, strengthening analytical thinking and problem-solving skills for middle school students.</p>
@@ -1671,7 +1671,7 @@ body.dark-mode.theme-sky header {
   <div class="contact-info">
     <p><i class="fa-solid fa-envelope"></i><strong> Email:</strong> <a href="mailto:bouzianiimane1@gmail.com">bouzianiimane1@gmail.com</a></p>
     <p><i class="fa-solid fa-phone"></i><strong> Phone:</strong> +213 664 64 77 79</p>
-    <p><i class="fa-brands fa-whatsapp"></i><strong> WhatsApp:</strong> 0673945830</p>
+    <p><i class="fa-brands fa-whatsapp"></i><strong> WhatsApp:</strong> 0664647779</p>
     <p><i class="fa-solid fa-location-dot"></i><strong> Location:</strong> Oran, Algeria</p>
     <p><i class="fa-brands fa-linkedin"></i><strong> LinkedIn:</strong> <a href="https://linkedin.com/in/bouzianiimane" target="_blank">linkedin.com/in/bouzianiimane</a></p>
     <p><i class="fa-brands fa-github"></i><strong> GitHub:</strong> <a href="https://github.com/bouzianiimane" target="_blank">github.com/bouzianiimane</a></p>
@@ -2373,6 +2373,7 @@ setTimeout(typing, 500);
 </script>
 </body>
 </html>
+
 
 
 
