--- a/index.html
+++ b/index.html
@@ -1339,7 +1339,7 @@ body.dark-mode.theme-sky header {
     </div>
     <div class="chat-body" id="chatBody">
       <div class="chat-message chat-bot">
-        Hi, I'm Imane! 👋 Want to know about my skills or experience?
+        Hi, I'm Imane's Assistant! 👋 Want to know about my skills or experience?
       </div>
       <div class="chat-options">
         <button class="chat-option" data-option="skills">Tell me about your skills</button>
@@ -1360,7 +1360,7 @@ body.dark-mode.theme-sky header {
       <h1>Bouziani Imane</h1>
       <p id="greeting"></p> <!-- Dynamic greeting -->
 <p id="typing" class="professional-subtitle"></p>
-      <p>| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
+      <p>| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0664647779 | Oran, Algeria |</p>
     </div>
   </header>
 
@@ -2373,6 +2373,7 @@ setTimeout(typing, 500);
 </script>
 </body>
 </html>
+
 
 
 
